--- a/styles.css
+++ b/styles.css
@@ -311,7 +311,7 @@ h4.statement {
     scroll-snap-align: start;
     background: #fff;
     padding: 24px;
-    border: 1px solid #eee;
+    border: 1px solid black;
 }
 
 .testimonial-header {
